Change to noClasspath mode to resolve GeneratedFile annotation issue